--- a/CityPopulationMVC/Views/City/Create.cshtml
+++ b/CityPopulationMVC/Views/City/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using CityPopulationService
 
-@model CityData
+@model CityModel
 
 
 @*
@@ -9,6 +9,12 @@
 }
 
 <h1>Create</h1>
+
+        <div class="mb-3">
+            <label asp-for="State"></label>
+            <input asp-for="State" class="form-control" />
+        </div>
+
 *@
 
 <form method="post">
@@ -23,7 +29,9 @@
         </div>
         <div class="mb-3">
             <label asp-for="State"></label>
-            <input asp-for="State" class="form-control" />
+            <select id="drpEmpList" class="form-control" asp-for="State" asp-items="@(new SelectList(Model.StateList, "Value", "Text"))">  
+                    <option value="">--Select--</option>  
+            </select> 
         </div>
         <div class="mb-3">
             <label asp-for="Population"></label>
