--- a/CityPopulationMVC/Views/City/Index.cshtml
+++ b/CityPopulationMVC/Views/City/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">City</h2>
+            <h2 class="text-primary"></h2>
         </div>
         <div class="col-6 text-end">
             <a asp-controller="City" asp-action="Create" class="btn btn-primary">
